# Aggregated-Orderbook

./: .gitignore  Cargo.toml  Readme.md  Readme.txt  build.rs  task.txt
protos/: orderbook.proto
src/: grpc_service.rs  main.rs
src/modules/: aggregated_orderbook.rs  binance.rs  bitstamp.rs  mod.rs  types.rs
tests/: orderbook_tests.rs
