[package]
name = "keyrock_mm_rust_task"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
ordered-float = "4"
