[package]
name = "keyrock_mm_rust_task"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
ordered-float = "4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tonic = "0.12"
prost = "0.13"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[[bin]]
name = "client"
path = "bin/client.rs"

[build-dependencies]
tonic-build = "0.12"
